\_________________________________________________________________/

2007-05-31 Benedikt Heintel
	- DATABASE:
		* changed Englisch language
	- GUI:
		* Fixed: missing $cfg in tr-function

2007-05-31 Henrik Schytte
	- GUI
		* Fixed #214: Wrong size for ispCP - Logo
		* Fixed #292: Color Contrast in pma not ok
	        * Fixed #239: Order-Panel in old look

2007-05-31 Malte Geierhos
	- GUI
		* Fixed #334: Reseller cannot confirm / add ordered domains
		* Fixed #333: upload of logo not possible (thx Sawoy)
		* Fixed #304: subject of mails was wrong encoded
		* Fixed #331: Theme Color Path missing for Servicemode
		* Fixed #329: Wrong colors in admin log (thx Sawoy again)

	- SETUP
		* Fixed #332: Keylength for pma-blowfish secret fixed to be below 256bit

	- CONFIGS
		* Fixed #314: missing linefeed for fedora's bind in db_master_e.tpl
		* Fixed #315: missing linefeed for fedora's bind in db_sub_entry.tpl
		* Fixed #316: wrong path in cfg_entry.tpl
		* Fixed #320: wrong aliases for awstats on fedora systems
		* Fixed #321: wrong path in ispcp.conf

2007-05-30 Raphael Geissert
	- GUI
		* Fixed #303: Assigning more than 999 ftp/email/etc accounts is not possible
	- SETUP/GUI
		* PMA's blowfish key is now randomly generated at install-time

2007-05-30 Benedikt Heintel
	- GUI
		* fixed #327: some old VHCS stuff found

2007-05-29 Raphael Geissert
	- CONFIGS
		* Fixed #300: Disabling PHP with FastCGI has no effect
		* Added support for mod_php5
	- GUI
		* Fixed #301: Missing % after the numbers in sysinfo.php
		* Fixed #299: Reseller/Admin custom logo can't be removed
		* Fixed non-jpg logo images being renamed to .jpg
	- SETUP
		* Fixed #298: Wrong /etc/hosts file being generated (thanks to sawoy)
		* /etc/resolv.conf isn't replaced, nameservers are only prepended
		* Added creation of backups of /etc/hosts and /etc/resolv.conf

2007-05-28 Raphael Geissert
	- GUI
		* Fixed #313: typo in gui/include/sql.php
		* Fixed #324: typo in gui/client/update_hp.php
	- SETUP