@@ -63,11 +63,11 @@ function action_delete(url) {
           <!-- EDP: page_message -->
           <!-- BDP: tickets_list -->
           <tr>
-            <td colspan="2" class="content3" nowrap="nowrap" align="center"><b>{TR_TICKET_FROM}</b></td>
-            <td width="260" class="content3" nowrap="nowrap" align="center"><b>{TR_SUBJECT}</b></td>
-            <td width="150" class="content3" nowrap="nowrap" align="center"><b>{TR_URGENCY}</b></td>
-            <td width="100" class="content3" nowrap="nowrap" align="center"><b>{TR_LAST_DATA}</b></td>
-            <td width="100" class="content3" nowrap="nowrap" align="center"><b>{TR_ACTION}</b></td>
+            <td colspan="2" class="content3" align="center"><b>{TR_TICKET_FROM}</b></td>
+            <td width="260" class="content3" align="center"><b>{TR_SUBJECT}</b></td>
+            <td width="150" class="content3" align="center"><b>{TR_URGENCY}</b></td>
+            <td width="100" class="content3" align="center"><b>{TR_LAST_DATA}</b></td>
+            <td width="100" class="content3" align="center"><b>{TR_ACTION}</b></td>
           </tr>
           <!-- BDP: tickets_item -->
           <tr>
