@@ -66,10 +66,10 @@ function action_delete(url) {
                           <!-- EDP: page_message -->
                           <!-- BDP: tickets_list -->
                           <tr>
-                            <td colspan="2" nowrap class="content3"><b>{TR_SUBJECT}</b></td>
-                            <td width="150" class="content3" nowrap align="center"><b>{TR_URGENCY}</b></td>
-                            <td width="100" class="content3" nowrap align="center"><b>{TR_LAST_DATA}</b></td>
-                            <td width="100" align="center" nowrap class="content3"><strong>{TR_ACTION}</strong></td>
+                            <td colspan="2" class="content3"><b>{TR_SUBJECT}</b></td>
+                            <td width="150" class="content3" align="center"><b>{TR_URGENCY}</b></td>
+                            <td width="100" class="content3" align="center"><b>{TR_LAST_DATA}</b></td>
+                            <td width="100" align="center" class="content3"><strong>{TR_ACTION}</strong></td>
                           </tr>
                           <!-- BDP: tickets_item -->
                           <tr>
