@@ -179,7 +179,6 @@ td.content3 {
 	color: 				#ffffff;
 	white-space: 		nowrap;
 	background: 		#000000;
-	white-space: 		nowrap;
 	height: 			30px;
 	padding: 			2px;
 	padding-left:		5px;
