@@ -4,8 +4,8 @@
 <!-- BDP: purchase_list -->
 <table width="400">
   <tr>
-    <td class="content3"><a href="package_info.php?id={PACK_ID}&user_id={USER_ID}" class="link"><strong>{PACK_NAME}</strong></a> {PRICE}</td>
-    <td width="40" align="center" nowrap  class="content3"><a href="addon.php?id={PACK_ID}&user_id={USER_ID}" class="link">{PURCHASE}</a></td>
+    <td class="content3"><a href="package_info.php?id={PACK_ID}&user_id={USER_ID}" class="linkdark"><strong>{PACK_NAME}</strong></a> {PRICE}</td>
+    <td width="40" align="center" nowrap  class="content3"><a href="addon.php?id={PACK_ID}&user_id={USER_ID}" class="linkdark">{PURCHASE}</a></td>
   </tr>
   <tr>
     <td colspan="2"  class="content">{PACK_INFO}</td>
